syntax = "proto3";
package fellowship_roles;

service micro {
    rpc Create (RoleRequest) returns (Empty) {}
    rpc Delete (RoleIdRequest) returns (Empty) {}
    rpc Update (RoleRequest) returns (Empty) {}
    rpc Get (RoleIdRequest) returns (Role) {}
    rpc List (Empty) returns (RoleList) {}
}

enum Level {
    BOOTCAMP = 0;
    D0A_MONTH_ONE = 1;
    D0A_SIMULATIONS = 2;
    D1_DEVELOPER = 3;
    D2_DEVELOPER = 4;
    D3_DEVELOPER = 5;
    D4_DEVELOPER = 6;
}

message RoleRequest {
    int32 id = 1;
    string name = 2;
    Level level = 3;
    repeated int32 skills = 4;
}

message RoleIdRequest {
    int32 id = 1;
}

message Empty {}

message Skill {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 score_guideline_id = 4;
}

message Role {
    int32 id = 1;
    string name = 2;
    Level level = 3;
    repeated Skill skills = 4;
    string created_at = 5;
    string updated_at = 6;
}

message RoleList {
    repeated Role roles = 1;
}
