syntax = "proto3";

package progress;

service micro {
  rpc ListAll (Query) returns (PeriodicProgress) {}
  rpc Create (ProgressData) returns (Empty) {}
  rpc GetUserProgress (Query) returns (Progress) {}
  rpc GetCohortAverage (Query) returns (Progress) {}
  rpc GetLevelAverage (Query) returns (Progress) {}
}

message Empty {}

message ProgressData {
  string user_id = 1;
  string level_id = 2;
  string cohort_id = 3;
  double percent = 4;
}

message Query {
  string id = 1;
  string levelId = 2;
  string cohortId = 3;
  string start = 4;
  string end = 5;
}

message Progress {
  double progress = 1;
}

message ProgressList {
  repeated double values = 1;
}

message PeriodicProgress {
  map<string, ProgressList> progress = 1;
}